--- a/kustomize/install/manager/manager.yaml
+++ b/kustomize/install/manager/manager.yaml
@@ -26,6 +26,8 @@ spec:
               fieldPath: metadata.namespace
         - name: CRUNCHY_DEBUG
           value: "true"
+        - name: RELATED_IMAGE_POSTGRES_13
+          value: "registry.hub.docker.com/sheitag/crunchy-postgres:ubi8-13.9-2"
         - name: RELATED_IMAGE_POSTGRES_14
           value: "registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-14.7-0"
         - name: RELATED_IMAGE_POSTGRES_14_GIS_3.1
